separate InventoryPrizes conjunction model